--- a/InitialProject/InitialProject/View/GuestFolder/ProfileView.xaml
+++ b/InitialProject/InitialProject/View/GuestFolder/ProfileView.xaml
@@ -3,33 +3,64 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
         xmlns:local="clr-namespace:InitialProject.View"
         mc:Ignorable="d"
-        Title="Profile view" Height="393" Width="800" Background="Lavender">
-    <Grid Margin="0,0,0,-43">
+        Title="Profile view" Height="501" Width="800" Background="Lavender">
+    <Grid x:Name="Ime"  Margin="0,10,-52,17" Height="NaN">
         <DataGrid x:Name="dataGridRatings"
             ItemsSource="{Binding Reservations, UpdateSourceTrigger=PropertyChanged}"
             SelectedItem="{Binding SelectedReservation, UpdateSourceTrigger=PropertyChanged}"
-            AutoGenerateColumns="False" IsReadOnly="True" Margin="0,159,0,63" FontSize="25" HorizontalAlignment="Center" Width="764" Background="Lavender" FontFamily="Bahnschrift Light" BorderBrush="Lavender">
+            AutoGenerateColumns="False" IsReadOnly="True" Margin="18,300,0,0" FontSize="25" HorizontalAlignment="Left" Width="764" Background="Lavender" FontFamily="Bahnschrift Light" BorderBrush="Lavender" Height="142" VerticalAlignment="Top" GridLinesVisibility="None" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="FontSize" Value="15" />
                 </Style>
             </DataGrid.ColumnHeaderStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Name" Binding="{Binding GuestId}" Width="80" />
-                <DataGridTextColumn Header="Cleanliness" Binding="{Binding Cleanliness}" Width="83"/>
-                <DataGridTextColumn Header="Obedience" Binding="{Binding Obedience}" Width="85"/>
+                <DataGridTextColumn Header="Cleanliness" Binding="{Binding Cleanliness}" Width="87"/>
+                <DataGridTextColumn Header="Obedience" Binding="{Binding Obedience}" Width="87"/>
                 <DataGridTextColumn Header="Comment" Binding="{Binding Comment}" Width="505"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label Content="Name:" HorizontalAlignment="Left" Margin="18,16,0,0" VerticalAlignment="Top" Height="52" Width="98" FontSize="25" FontFamily="Bahnschrift Light"/>
-        <Label x:Name="NameLabel" Content="Label" HorizontalAlignment="Left" Margin="18,68,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light"/>
-        <Label x:Name="SuperGuestLabel" Content="Label" HorizontalAlignment="Left" Margin="400,10,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light"/>
-        <Image x:Name="Image" HorizontalAlignment="Left" Height="53" Margin="416,62,0,0" VerticalAlignment="Top" Width="57" Source="/Resources/Images/trophy.jpg"/>
+        <Label Content="Name:" HorizontalAlignment="Left" Margin="9,17,0,0" VerticalAlignment="Top" Height="52" Width="98" FontSize="25" FontFamily="Bahnschrift Light"/>
+        <Label x:Name="NameLabel" Content="Label" HorizontalAlignment="Left" Margin="18,68,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light" Height="40" Width="150"/>
+        <Label x:Name="SuperGuestLabel" Content="Label" HorizontalAlignment="Left" Margin="18,113,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light" Height="40" Width="176"/>
+        <Image x:Name="Image" HorizontalAlignment="Left" Height="53" Margin="88,176,0,0" VerticalAlignment="Top" Width="58" Source="/View/GuestFolder/trophy1.png"/>
         <Label Content="B - GO BACK ON
 PREVIOUS PAGE
-" HorizontalAlignment="Left" Margin="552,12,0,0" VerticalAlignment="Top" FontSize="15" Width="238" FontFamily="Bahnschrift Light"/>
-        <Label Content="Your reviews:" HorizontalAlignment="Left" Margin="18,119,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light"/>
+" HorizontalAlignment="Left" Margin="456,531,0,0" VerticalAlignment="Top" FontSize="15" Width="264" FontFamily="Bahnschrift Light" Grid.Column="1" Height="28"/>
+        <Label Content="Your reviews:" HorizontalAlignment="Left" Margin="9,255,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light" Height="40" Width="159" Grid.Column="1"/>
+        <Grid x:Name="Ime1" Margin="223,4,323,190" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="11*"/>
+                <ColumnDefinition Width="142*"/>
+            </Grid.ColumnDefinitions>
+            <Border BorderBrush="Black" BorderThickness="1" Margin="16,0,10,0">
+                <Border.Effect>
+                    <DropShadowEffect Color="Black" Direction="100" ShadowDepth="5" Opacity="1" />
+                </Border.Effect>
+            </Border>
+            <Border BorderBrush="Black" BorderThickness="1" Grid.Column="1" Margin="12,14,10,10"/>
+        </Grid>
+        <Grid x:Name="Ime2" Margin="516,17,0,203" HorizontalAlignment="Left" Width="266">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="11*"/>
+                <ColumnDefinition Width="142*"/>
+            </Grid.ColumnDefinitions>
+            <Border BorderBrush="Black" BorderThickness="1" Margin="16,0,0,0" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="241">
+                <Border.Effect>
+                    <DropShadowEffect Color="Black" Direction="300" ShadowDepth="3" Opacity="0.5" />
+                </Border.Effect>
+            </Border>
+        </Grid>
+        <Border BorderBrush="Black" BorderThickness="1" Margin="10,17,624,203">
+            <Border.Effect>
+                <DropShadowEffect Color="Black" Direction="300" ShadowDepth="3" Opacity="0.5" />
+            </Border.Effect>
+        </Border>
+
+
     </Grid>
+
 </Window>
