--- a/InitialProject/InitialProject/View/GuestFolder/RescheduleView.xaml
+++ b/InitialProject/InitialProject/View/GuestFolder/RescheduleView.xaml
@@ -12,7 +12,38 @@
         <DatePicker x:Name="StartDatePicker" HorizontalAlignment="Left" Margin="230,110,0,0" VerticalAlignment="Top" Width="126" FontFamily="Bahnschrift Light"/>
         <DatePicker x:Name="EndDatePicker" HorizontalAlignment="Left" Margin="230,199,0,0" VerticalAlignment="Top" Width="126" FontFamily="Bahnschrift Light"/>
         <Label Content="How would you like to rechedule a reservation?" HorizontalAlignment="Left" Margin="52,27,0,0" VerticalAlignment="Top" FontSize="25" FontFamily="Bahnschrift Light"/>
-        <Button x:Name="SubmitButton" Content="Submit" HorizontalAlignment="Left" Margin="52,258,0,0" VerticalAlignment="Top" Height="54" Width="208" FontSize="25" Click="SubmitButton_Click" FontFamily="Bahnschrift Light"/>
+        <Button x:Name="SubmitButton" Content="Submit" HorizontalAlignment="Left" Margin="52,258,0,0" VerticalAlignment="Top" Height="54" Width="208" FontSize="25" Click="SubmitButton_Click" FontFamily="Bahnschrift Light">
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="10">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                  VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <Button.Effect>
+                <DropShadowEffect Color="Black" Direction="300" ShadowDepth="3" Opacity="0.5" />
+            </Button.Effect>
+        </Button>
+        <Button x:Name="CommentButton_Copy" Content="Go back" HorizontalAlignment="Left" Margin="383,0,0,0" VerticalAlignment="Center" Height="54" Width="208" FontSize="25" Click="GoBack" FontFamily="Bahnschrift Light">
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="10">
+                        <ContentPresenter HorizontalAlignment="Center"
+                            VerticalAlignment="Center" />
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+            <Button.Effect>
+                <DropShadowEffect Color="Black" Direction="300" ShadowDepth="3" Opacity="0.5" />
+            </Button.Effect>
+        </Button>
 
     </Grid>
 </Window>
